# boitata-deferred-renderer

./: .gitignore  CMakeLists.txt  README.md  compile.sh
include/: CMakeLists.txt
include/boitatah/: Renderer.hpp  buffers.hpp  collections.hpp  images.hpp  materials.hpp  resources.hpp
include/boitatah/backend/: Backend.hpp
include/boitatah/backend/vulkan/: CommandsVk.hpp  VkCommandBufferWriter.hpp  VkCommandBufferWriterStructs.hpp  Vulkan.hpp  VulkanStructs.hpp  Window.hpp
include/boitatah/buffers/: Buffer.hpp  BufferAllocator.hpp  BufferManager.hpp  BufferStructs.hpp
include/boitatah/collections/: Pool.hpp
include/boitatah/commands/: CommandBuffer.hpp  CommandBufferWriter.hpp  CommandBufferWriterStructs.hpp  Commands.hpp
include/boitatah/lights/: Lights.hpp
include/boitatah/modules/: BackBuffer.hpp  BackBufferDesc.hpp  BufferCamera.hpp  DescriptorSetManager.hpp  GPUResourceManager.hpp  GPUResourcePool.hpp  ImageManager.hpp  MaterialManager.hpp  RenderTargetManager.hpp  StageBaseMaterialManager.hpp  Swapchain.hpp
include/boitatah/resources/: GPUBuffer.hpp  GPUResource.hpp  Geometry.hpp  ResourceStructs.hpp  Texture.hpp  TextureStructs.hpp
include/boitatah/resources/builders/: GeometryBuilder.hpp
include/boitatah/scene/: Scene.hpp
include/boitatah/shaders/: camera.frag  camera_frag.spv  camera_vert.spv
include/boitatah/shaders/base_shaders/: base_camera_mat.frag  base_camera_mat.vert  base_screen_quad.vert  lambert_deferred_compose.frag  lambert_deferred_compose.frag.spv  lit_camera_mat.vert  lit_material_deferred.frag  lit_material_deferred.frag.spv  unlit_camera_mat.vert  unlit_deferred_compose.frag  (+1 more)
include/boitatah/types/: Descriptors.hpp  Image.hpp  Material.hpp  Memory.hpp  RenderTarget.hpp  Shader.hpp  types.hpp
include/boitatah/utils/: ImageLoader.hpp  utils.cpp  utils.hpp
src/: CMakeLists.txt  compile_shaders.sh  compile_shaders2.sh
src/backends/vulkan/: Vulkan.cpp  Window.cpp
src/buffers/: Buffer.cpp  Buffer.hpp  BufferAllocator.cpp  BufferAllocator.hpp  BufferManager.cpp  BufferManager.hpp  BufferStructs.hpp
src/collections/: BufferAllocator.cpp  BufferAllocator.hpp  PartitionList.cpp  PartitionList.hpp  Pool.hpp
src/command_buffers/: CommandBufferWriter.hpp  CommandBufferWriterStructs.hpp
src/examples/: deferred_renderer.cpp  lit_deferred_renderer.cpp  lit_deferred_renderer2.cpp  multi_write_attachment.cpp  test_buffer_allocator.cpp  test_buffer_manager.cpp  test_camera.cpp  test_deferred_renderer.cpp  test_framebuffer.cpp  test_geometry.cpp  test_geometry_builder.cpp  test_lit_deferred_renderer.cpp  test_lit_deferred_renderer2.cpp  test_materials.cpp  test_multi_write_attachment.cpp  test_object_manager.cpp  test_partitionlist.cpp  test_push_constants.cpp  test_push_constants_stress.cpp  test_render.cpp  test_rendertotarget.cpp  test_scene_nodes.cpp  test_swapchain.cpp  test_texture.cpp  test_window.cpp
src/lights/: Lights.cpp
src/renderer/: BackBuffer.hpp  Camera.hpp  DescriptorPoolManager.cpp  DescriptorPoolManager.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
src/renderer/modules/: BackBuffer.cpp  BackBuffer.hpp  BackBufferDesc.hpp  BufferCamera.hpp  Camera.cpp  Camera.hpp  DescriptorPoolManager.hpp  DescriptorSetManager.cpp  DescriptorSetTree.cpp  DescriptorSetTree.hpp  GPUResourceManager.cpp  GPUResourceManager.hpp  GPUResourceManagerTEMP.hpp  GPUResourcePool.cpp  GPUResourcePool.hpp  HardcodedShaders.hpp  ImageManager.cpp  ImageManager.hpp  MaterialManager.cpp  MaterialManager.hpp  RenderGraph.hpp  RenderObjectManager.cpp  RenderObjectManager.hpp  RenderPassManager.hpp  RenderTargetManager.cpp  RenderTargetManager.hpp  StageBaseMaterialManager.cpp  StageBaseMaterialManager.hpp  Swapchain.cpp  Swapchain.hpp  UniformManager..hpp  Window.cpp  Window.hpp
src/renderer/resources/: GPUBuffer.cpp  GPUBuffer.hpp  GPUResource.hpp  Geometry.cpp  Geometry.hpp  ResourceStructs.hpp  Texture.cpp
src/renderer/resources/builders/: GeometryBuilder.cpp  GeometryBuilder.hpp
src/scene/: Scene.hpp
src/shaders/: 18_shader_vertexbuffer.frag  basic_camera_mat.vert  basic_camera_mat.vert.spv  camera.frag  camera.vert  camera_frag.spv  camera_vert.spv  frag.spv  push_constants.frag  push_constants.vert  shader.vert  shader_test.frag  unlit_material.frag  unlit_material.frag.spv  vert.spv
src/shaders/base_shaders/: base_camera_mat.frag.spv  base_camera_mat.vert  base_camera_mat.vert.spv  base_screen_quad.frag  base_screen_quad.vert  base_screen_quad_mat.vert  base_screen_quad_mat.vert.spv  lambert_deferred_compose.frag  lambert_deferred_compose.frag.spv  lit_camera_mat.vert  lit_camera_mat.vert.spv  lit_material_deferred.frag  lit_material_deferred.frag.spv  unlit_deferred_compose.frag  unlit_deferred_compose.frag.spv  unlit_material_deferred.frag.spv  unlit_material_deferred_test.frag  unlit_material_forward.frag.spv
src/structures/: FreeList.hpp  Pool.hpp
src/types/: BackBuffer.cpp  BackBuffer.hpp  BackBufferDesc.hpp  BttEnums.hpp  Buffer.cpp  Buffer.hpp  BufferStructs.hpp  BufferVkStructs.hpp  COLOR_SPACE.hpp  CommandBuffer.hpp  Commands.hpp  CommandsVk.hpp  Descriptors.hpp  Dimension.hpp  FORMAT.hpp  FRAME_BUFFERING.hpp  Framebuffer.hpp  GPUBuffer.hpp  GPUBufferTEMP.hpp  GPUResource.hpp  GPUResourceTEMP.hpp  Geometry.cpp  Geometry.hpp  GeometryTEMP.hpp  GraphicState.hpp  Image.hpp  Lights.cpp  Lights.hpp  Material.hpp  Memory.hpp  RenderTarget.hpp  Scene.hpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  TextureStructs.hpp  Uniform.hpp  Vector.hpp
src/types/commands/: CommandBuffer.hpp  Commands.hpp
src/utils/: FunctionStack.hpp  GeometryLoader.hpp  ImageLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  SpirVReflection.cpp  SpirVReflection.hpp  partial_sort.hpp  utils.cpp  utils.hpp
src/vulkan/: CommandsVk.hpp  DescriptorPoolManager.cpp  DescriptorPoolManager.hpp  DescriptorSetManager.cpp  DescriptorSetManager.hpp  DescriptorSetTree.cpp  DescriptorSetTree.hpp  VkCommandBufferWriter.hpp  VkCommandBufferWriterStructs.hpp  Vulkan.cpp  Vulkan.hpp  VulkanStructs.hpp  Window.cpp  Window.hpp
